--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produktliste</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Product List</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Produktliste</h1>
-        <input type="text" id="search" placeholder="Produkte durchsuchen...">
-        <button id="showFavorites">Favoriten anzeigen</button>
+        <h1>Product List</h1>
+        <input type="text" id="search" placeholder="Search products...">
+        <button id="favorites-btn">Show Favorites</button>
     </header>
 
-    <section id="product-list"></section>
+    <main id="product-list"></main>
 
-    <div id="favorites-modal" class="modal">
-        <h2>Favoriten</h2>
-        <div id="favorites-list"></div>
-        <button id="close-modal">Schließen</button>
+    <!-- Modal für Favorisieren -->
+    <div id="favorite-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-modal">&times;</span>
+            <h2>Choose Variant and Size</h2>
+            <label for="variants">Variants:</label>
+            <select id="variants"></select>
+
+            <label for="sizes">Sizes:</label>
+            <select id="sizes"></select>
+
+            <button id="save-favorite">Save to Favorites</button>
+        </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
