--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <header>
         <h1>Product List</h1>
-        <input type="text" id="search" placeholder="Search products...">
         <button id="favorites-btn">Show Favorites</button>
     </header>
+
+    <input type="text" id="search" placeholder="Search products...">
+
+    <!-- Anzeige der Anzahl der sichtbaren Produkte/Favoriten -->
+    <p id="product-count"></p>
 
     <main id="product-list"></main>
 
